data/derived/comb/progs/unify/prog6735.ml.out
Characters 116-118:
  | Sine b            -> sin(pi*eval(b,x,y)) 
                             ^^
Error: This expression has type float but an expression was expected of type
         int
